# hakyll

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.markdown  RELEASE-CHECKLIST.md  hakyll.cabal  stack-8.8.3.yaml  stack.yaml  test.hs
.circleci/: config.yml  tickle.sh
.github/workflows/: hlint.yml  main.yml
data/example/: .gitignore   README.md  code.lhs  index.html  index.markdown  site.hs
data/example/css/: default.css  syntax.css
data/example/posts/: 2012-10-07-rosa-rosa-rosam.markdown  2012-11-28-example-post.markdown  2012-12-07-running-hakyll.markdown  2012-12-07-tu-quoque.markdown
data/example/templates/: archive.html  default.html  post-item.html  post.html
data/examples/fresh/: site.hs
data/templates/: atom-item.xml  atom.xml  feed-item.json  feed.json  rss-item.xml  rss.xml
examples/: README.markdown
examples/brochure/: about.markdown  hakyll.hs  index.markdown  products.markdown
examples/brochure/css/: default.css  syntax.css
examples/brochure/templates/: default.html
examples/categoryblog/: hakyll.hs  index.html  posts.html
examples/categoryblog/templates/: post.html  postitem.html  rss.xml
examples/feedblog/: hakyll.hs  index.html
examples/feedblog/posts/: 2009-11-05-a-first-post.markdown  2009-11-10-another-post.markdown  2009-11-28-a-third-post.markdown  2009-12-04-this-blog-aint-dead.markdown  2009-12-23-almost-christmas.markdown
examples/feedblog/templates/: default.html  index.html  post.html  postitem.html
examples/hakyll/: about.markdown  changelog.markdown  hakyll.hs  index.markdown  philosophy.markdown  sidebar.markdown  tutorial.markdown  tutorial1.markdown  tutorial2.markdown  tutorial3.markdown  tutorial4.markdown  tutorial5.markdown  tutorial6.markdown  tutorial7.markdown  tutorials.markdown
examples/hakyll/css/: default.css  syntax.css
examples/hakyll/templates/: default.html  tutorialitem.html  tutorials.html
examples/hakyll/tutorials/: part01.markdown  part02.markdown  part03.markdown  part04.markdown  part05.markdown  part06.markdown  part07.markdown  part08.markdown
examples/morepages/: about.markdown  footer.markdown  hakyll.hs  index.markdown  products.markdown
examples/morepages/css/: default.css
examples/morepages/templates/: default.html
examples/rssblog/: hakyll.hs  index.html  posts.html
examples/rssblog/posts/: 2009-11-10-another-post.markdown
examples/rssblog/templates/: default.html  postitem.html  rss.xml
examples/simpleblog/: hakyll.hs  index.html  posts.html
examples/simpleblog/posts/: 2009-11-05-a-first-post.markdown  2009-11-28-a-third-post.markdown  2009-12-23-almost-christmas.markdown
examples/simpleblog/templates/: default.html  index.html  post.html  postitem.html  posts.html
examples/tagblog/: hakyll.hs  index.html  posts.html
examples/tagblog/posts/: 2009-11-05-a-first-post.markdown  2009-11-10-another-post.markdown  2009-11-28-a-third-post.markdown  2009-12-04-this-blog-aint-dead.markdown  2009-12-23-almost-christmas.markdown
examples/tagblog/templates/: default.html  index.html  post.html  postitem.html  posts.html  rssitem.xml
lib/: Hakyll.hs
lib/Data/List/: Extended.hs
lib/Hakyll/: Check.hs  Commands.hs  Main.hs
lib/Hakyll/Core/: Compiler.hs  Configuration.hs  Dependencies.hs  File.hs  Identifier.hs  Item.hs  Logger.hs  Metadata.hs  Provider.hs  Routes.hs  Rules.hs  Runtime.hs  Store.hs  UnixFilter.hs  Writable.hs
lib/Hakyll/Preview/: Poll.hs  Server.hs
lib/Hakyll/Web/: CompressCss.hs  CompressJpg.hs  Feed.hs  Html.hs  Paginate.hs  Pandoc.hs  Redirect.hs  Tags.hs  Template.hs
scripts/: tickle.sh
src/: Hakyll.hs  Init.hs
src/Data/Yaml/: Extended.hs
src/Hakyll/: Check.hs  Commands.hs  Init.hs  Main.hs  Web.hs
src/Hakyll/Configs/: SmallBlog.hs
src/Hakyll/Core/: CompiledItem.hs  Compiler.hs  Configuration.hs  CopyFile.hs  Dependencies.hs  DependencyAnalyzer.hs  (+18 more)
src/Text/: Hakyll.hs
tests/: CompressCSS.hs  CompressCss.hs  Context.hs  File.hs  Main.hs  Page.hs  Regex.hs  Template.hs  TestSuite.hs  Tests.hs  Util.hs
tests/TestSuite/: Util.hs
tests/data/: embed.html  example.md  example.md.metadata  example.md.out  hardlink.rst  just-meta.html  just-meta.html.out  metadata  partial-helper.html  partial.html  partial.html.out  russian.md  strip.html  strip.html.out  template.html  template.html.out
web/: about.markdown  about.md  changelog.markdown  examples.markdown  hakyll.hs  index.markdown  index.md  libraries.markdown  philosophy.markdown  reference.markdown  releases.markdown  releases.md  sidebar.markdown  site.hs  tutorial.markdown
web/css/: default.css  syntax.css
web/templates/: default.html  tutorial-item.html  tutorial.html  tutorials.html
web/tutorials/: 01-installation.markdown  02-basics.markdown  03-arrows.markdown  03-compilers.markdown  03-rules-routes-compilers.markdown  03-rules-routes-compilers.md  04-compilers.markdown  04-compilers.md  04-guide.markdown  05-guide.markdown  05-snapshots-feeds.markdown  06-versions.markdown  a-guide-to-the-hakyll-module-zoo.markdown  a-guide-to-the-hakyll-module-zoo.md  external-add-tags-to-your-hakyll-blog.md  external-alternative-syntax-highlighting.md  external-bibtex.md  external-blogger-port.md  external-cassius-template.md  external-clean-urls-with-hakyll.md  external-deploying-with-widely.md  external-external-code-inclusion.md  external-functionfield.md  external-github-pages-circle-ci.md  external-inlining-and-compressing-css.md  external-jekyll-style-urls-with-hakyll.markdown  external-live-reload.md  external-server-side-katex-rendering.md  external-sidenotes.md  faq.markdown  github-pages-tutorial.md  guide.markdown  hakyll-3-to-hakyll4-migration-guide.markdown  riccardoodone-01-twitter-cards.html  riccardoodone-02-published-flag.html  riccardoodone-03-production-drafts.html  robertwpearce-01-setup-and-initial-customization.html  robertwpearce-02-generating-a-sitemap-xml-file.html  robertwpearce-03-generating-rss-and-atom-xml-feeds.html  robertwpearce-04-copying-static-files-for-your-build.html  (+6 more)
الويب/: site.hs
(+202 files in other folders)
