Name:    hakyll
Version: 4.9.4.0

Synopsis: A static website compiler library
Description:
  Hakyll is a static website compiler library. It provides you with the tools to
  create a simple or advanced static website using a Haskell DSL and formats
  such as markdown or RST. You can find more information, including a tutorial,
  on the website:

  .

  * <http://jaspervdj.be/hakyll>

  .

  If you seek assistance, there's:

  .

  * A google group: <http://groups.google.com/group/hakyll>

  .

  * An IRC channel, @#hakyll@ on freenode

  .

  Additionally, there's the Haddock documentation in the different modules,
  meant as a reference.

Author:       Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Homepage:     http://jaspervdj.be/hakyll
Bug-Reports:  http://github.com/jaspervdj/Hakyll/issues
License:      BSD3
License-File: LICENSE
Category:     Web

Cabal-Version: >= 1.8
Build-Type:    Simple
Data-Dir:      data

Data-files:
  example/posts/2015-11-28-carpe-diem.markdown
  example/posts/2015-10-07-rosa-rosa-rosam.markdown
  example/posts/2015-12-07-tu-quoque.markdown
  example/posts/2015-08-12-spqr.markdown
  example/site.hs
  example/images/haskell-logo.png
  example/templates/post-list.html
  example/templates/default.html
  example/templates/archive.html
  example/templates/post.html
  example/css/default.css
  example/index.html
  example/about.rst
  example/contact.markdown
  templates/atom-item.xml
  templates/atom.xml
  templates/rss-item.xml
  templates/rss.xml

Extra-source-files:
  CHANGELOG.md
  tests/data/example.md
  tests/data/example.md.metadata
  tests/data/images/favicon.ico
  tests/data/just-meta.html
  tests/data/just-meta.html.out
  tests/data/partial-helper.html
  tests/data/partial.html
  tests/data/partial.html.out
  tests/data/posts/2010-08-26-birthday.md
  tests/data/russian.md
  tests/data/strip.html
  tests/data/strip.html.out
  tests/data/template.html
  tests/data/template.html.out

Source-Repository head
  Type:     git
  Location: git://github.com/jaspervdj/hakyll.git

Flag previewServer
  Description: Include the preview server
  Default:     True

Flag watchServer
  Description: Include the watch server
  Default:     True

Flag checkExternal
  Description: Include external link checking
  Default:     True

Library
  Ghc-Options:    -Wall
  Hs-Source-Dirs: src

  Exposed-Modules:
    Hakyll
    Hakyll.Commands
    Hakyll.Core.Compiler
    Hakyll.Core.Configuration
    Hakyll.Core.Dependencies
    Hakyll.Core.File
    Hakyll.Core.Identifier
    Hakyll.Core.Identifier.Pattern
    Hakyll.Core.Item
    Hakyll.Core.Metadata
    Hakyll.Core.Routes
    Hakyll.Core.Rules
    Hakyll.Core.UnixFilter
    Hakyll.Core.Util.String
    Hakyll.Core.Writable
    Hakyll.Main
    Hakyll.Web.CompressCss
    Hakyll.Web.Feed
    Hakyll.Web.Html
    Hakyll.Web.Html.RelativizeUrls
    Hakyll.Web.Pandoc
    Hakyll.Web.Pandoc.Biblio
    Hakyll.Web.Pandoc.FileType
    Hakyll.Web.Redirect
    Hakyll.Web.Tags
    Hakyll.Web.Paginate
    Hakyll.Web.Template
    Hakyll.Web.Template.Context
    Hakyll.Web.Template.Internal
    Hakyll.Web.Template.Internal.Element
    Hakyll.Web.Template.Internal.Trim
    Hakyll.Web.Template.List

  Other-Modules:
    Data.List.Extended
    Data.Yaml.Extended
    Hakyll.Check
    Hakyll.Core.Compiler.Internal
    Hakyll.Core.Compiler.Require
    Hakyll.Core.Item.SomeItem
    Hakyll.Core.Logger
    Hakyll.Core.Provider
    Hakyll.Core.Provider.Internal
    Hakyll.Core.Provider.Metadata
    Hakyll.Core.Provider.MetadataCache
    Hakyll.Core.Rules.Internal
    Hakyll.Core.Runtime
    Hakyll.Core.Store
    Hakyll.Core.Util.File
    Hakyll.Core.Util.Parser
    Hakyll.Web.Pandoc.Binary
    Paths_hakyll

  Build-Depends:
    base                 >= 4.8    && < 5,
    binary               >= 0.5    && < 0.9,
    blaze-html           >= 0.5    && < 0.9,
    blaze-markup         >= 0.5.1  && < 0.8,
    bytestring           >= 0.9    && < 0.11,
    containers           >= 0.3    && < 0.6,
    cryptohash           >= 0.7    && < 0.12,
    data-default         >= 0.4    && < 0.8,
    deepseq              >= 1.3    && < 1.5,
    directory            >= 1.0    && < 1.4,
    filepath             >= 1.0    && < 1.5,
    lrucache             >= 1.1.1  && < 1.3,
    mtl                  >= 1      && < 2.3,
    network              >= 2.6    && < 2.7,
    network-uri          >= 2.6    && < 2.7,
    pandoc               >= 1.14   && < 1.20,
    pandoc-citeproc      >= 0.4    && < 0.11,
    parsec               >= 3.0    && < 3.2,
    process              >= 1.0    && < 1.5,
    random               >= 1.0    && < 1.2,
    regex-base           >= 0.93   && < 0.94,
    regex-tdfa           >= 1.1    && < 1.3,
    resourcet            >= 1.1    && < 1.2,
    scientific           >= 0.3.4  && < 0.4,
    tagsoup              >= 0.13.1 && < 0.15,
    text                 >= 0.11   && < 1.3,
    time                 >= 1.4    && < 1.8,
    time-locale-compat   >= 0.1    && < 0.2,
    unordered-containers >= 0.2    && < 0.3,
    vector               >= 0.11   && < 0.13,
    yaml                 >= 0.8.11 && < 0.9,
    optparse-applicative >= 0.12   && < 0.14

  If flag(previewServer)
    Build-depends:
      wai             >= 3.2   && < 3.3,
      warp            >= 3.2   && < 3.3,
      wai-app-static  >= 3.1   && < 3.2,
      http-types      >= 0.9   && < 0.10,
      fsnotify        >= 0.2   && < 0.3,
      system-filepath >= 0.4.6 && <= 0.5
    Cpp-options:
      -DPREVIEW_SERVER
    Other-modules:
      Hakyll.Preview.Poll
      Hakyll.Preview.Server

  If flag(watchServer)
    Build-depends:
      fsnotify        >= 0.2   && < 0.3,
      system-filepath >= 0.4.6 && <= 0.5
    Cpp-options:
      -DWATCH_SERVER
    Other-modules:
      Hakyll.Preview.Poll

  If flag(checkExternal)
    Build-depends:
      http-conduit >= 2.2    && < 2.3,
      http-types   >= 0.7    && < 0.10
    Cpp-options:
      -DCHECK_EXTERNAL

Test-suite hakyll-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall
  Other-modules:
    Hakyll.Core.Dependencies.Tests
    Hakyll.Core.Identifier.Tests
    Hakyll.Core.Provider.Metadata.Tests
    Hakyll.Core.Provider.Tests
    Hakyll.Core.Routes.Tests
    Hakyll.Core.Rules.Tests
    Hakyll.Core.Runtime.Tests
    Hakyll.Core.Store.Tests
    Hakyll.Core.UnixFilter.Tests
    Hakyll.Core.Util.String.Tests
    Hakyll.Web.CompressCss.Tests
    Hakyll.Web.Html.RelativizeUrls.Tests
    Hakyll.Web.Html.Tests
    Hakyll.Web.Pandoc.FileType.Tests
    Hakyll.Web.Template.Context.Tests
    Hakyll.Web.Template.Tests
    TestSuite.Util

  Build-Depends:
    QuickCheck                 >= 2.8  && < 2.10,
    tasty                      >= 0.11 && < 0.12,
    tasty-hunit                >= 0.9  && < 0.10,
    tasty-quickcheck           >= 0.8  && < 0.9,
    -- Copy pasted from hakyll dependencies:
    base                 >= 4.8    && < 5,
    binary               >= 0.5    && < 0.9,
    blaze-html           >= 0.5    && < 0.9,
    blaze-markup         >= 0.5.1  && < 0.8,
    bytestring           >= 0.9    && < 0.11,
    containers           >= 0.3    && < 0.6,
    cryptohash           >= 0.7    && < 0.12,
    data-default         >= 0.4    && < 0.8,
    deepseq              >= 1.3    && < 1.5,
    directory            >= 1.0    && < 1.4,
    filepath             >= 1.0    && < 1.5,
    lrucache             >= 1.1.1  && < 1.3,
    mtl                  >= 1      && < 2.3,
    network              >= 2.6    && < 2.7,
    network-uri          >= 2.6    && < 2.7,
    pandoc               >= 1.14   && < 1.20,
    pandoc-citeproc      >= 0.4    && < 0.11,
    parsec               >= 3.0    && < 3.2,
    process              >= 1.0    && < 1.5,
    random               >= 1.0    && < 1.2,
    regex-base           >= 0.93   && < 0.94,
    regex-tdfa           >= 1.1    && < 1.3,
    resourcet            >= 1.1    && < 1.2,
    scientific           >= 0.3.4  && < 0.4,
    tagsoup              >= 0.13.1 && < 0.15,
    text                 >= 0.11   && < 1.3,
    time                 >= 1.4    && < 1.8,
    time-locale-compat   >= 0.1    && < 0.2,
    unordered-containers >= 0.2    && < 0.3,
    vector               >= 0.11   && < 0.13,
    yaml                 >= 0.8.11 && < 0.9,
    optparse-applicative >= 0.12   && < 0.14

  If flag(previewServer)
    Build-depends:
      wai             >= 3.2   && < 3.3,
      warp            >= 3.2   && < 3.3,
      wai-app-static  >= 3.1   && < 3.2,
      http-types      >= 0.9   && < 0.10,
      fsnotify        >= 0.2   && < 0.3,
      system-filepath >= 0.4.6 && <= 0.5
    Cpp-options:
      -DPREVIEW_SERVER
    Other-modules:
      Hakyll.Preview.Poll
      Hakyll.Preview.Server

  If flag(watchServer)
    Build-depends:
      fsnotify        >= 0.2   && < 0.3,
      system-filepath >= 0.4.6 && <= 0.5
    Cpp-options:
      -DWATCH_SERVER
    Other-modules:
      Hakyll.Preview.Poll

  If flag(checkExternal)
    Build-depends:
      http-conduit >= 2.2    && < 2.3,
      http-types   >= 0.7    && < 0.10
    Cpp-options:
      -DCHECK_EXTERNAL

Executable hakyll-init
  Ghc-options:    -Wall
  Hs-source-dirs: src
  Main-is:        Hakyll/Init.hs

  Build-depends:
    base      >= 4   && < 5,
    directory >= 1.0 && < 1.4,
    filepath  >= 1.0 && < 1.5

  Other-modules:
    Hakyll.Core.Util.File
    Paths_hakyll
