Name:    hakyll
Version: 4.13.0.1

Synopsis: A static website compiler library
Description:
  Hakyll is a static website compiler library. It provides you with the tools to
  create a simple or advanced static website using a Haskell DSL and formats
  such as markdown or RST. You can find more information, including a tutorial,
  on the website:

  .

  * <http://jaspervdj.be/hakyll>

  .

  If you seek assistance, there's:

  .

  * A google group: <http://groups.google.com/group/hakyll>

  .

  * An IRC channel, @#hakyll@ on freenode

  .

  Additionally, there's the Haddock documentation in the different modules,
  meant as a reference.

Author:       Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Homepage:     http://jaspervdj.be/hakyll
Bug-Reports:  http://github.com/jaspervdj/Hakyll/issues
License:      BSD3
License-File: LICENSE
Category:     Web

Cabal-Version: >= 1.10
Build-Type:    Simple
Data-Dir:      data

Data-files:
  example/posts/2015-11-28-carpe-diem.markdown
  example/posts/2015-10-07-rosa-rosa-rosam.markdown
  example/posts/2015-12-07-tu-quoque.markdown
  example/posts/2015-08-12-spqr.markdown
  example/site.hs
  example/images/haskell-logo.png
  example/templates/post-list.html
  example/templates/default.html
  example/templates/archive.html
  example/templates/post.html
  example/css/default.css
  example/index.html
  example/about.rst
  example/contact.markdown

Extra-source-files:
  CHANGELOG.md
  tests/data/embed.html
  tests/data/example.md
  tests/data/example.md.metadata
  tests/data/images/favicon.ico
  tests/data/just-meta.html
  tests/data/just-meta.html.out
  tests/data/partial-helper.html
  tests/data/partial.html
  tests/data/partial.html.out
  tests/data/posts/2010-08-26-birthday.md
  tests/data/posts/2018-09-26.md
  tests/data/posts/2019/05/10/tomorrow.md
  tests/data/russian.md
  tests/data/strip.html
  tests/data/strip.html.out
  tests/data/template.html
  tests/data/template.html.out
  data/templates/atom-item.xml
  data/templates/atom.xml
  data/templates/rss-item.xml
  data/templates/rss.xml

Source-Repository head
  Type:     git
  Location: git://github.com/jaspervdj/hakyll.git

Flag previewServer
  Description: Include the preview server
  Default:     True

Flag watchServer
  Description: Include the watch server
  Default:     True

Flag checkExternal
  Description: Include external link checking
  Default:     True

Flag buildWebsite
  Description: Build the hakyll website
  Default:     False
  Manual:      True

Flag usePandoc
  Description: Include Pandoc support
  Default:     True
  Manual:      True

Library
  Ghc-Options:      -Wall
  Hs-Source-Dirs:   lib
  Default-language: Haskell2010

  Exposed-Modules:
    Hakyll
    Hakyll.Commands
    Hakyll.Core.Compiler
    Hakyll.Core.Compiler.Internal
    Hakyll.Core.Configuration
    Hakyll.Core.Dependencies
    Hakyll.Core.File
    Hakyll.Core.Identifier
    Hakyll.Core.Identifier.Pattern
    Hakyll.Core.Item
    Hakyll.Core.Logger
    Hakyll.Core.Metadata
    Hakyll.Core.Provider
    Hakyll.Core.Provider.Metadata
    Hakyll.Core.Routes
    Hakyll.Core.Rules
    Hakyll.Core.Rules.Internal
    Hakyll.Core.Runtime
    Hakyll.Core.Store
    Hakyll.Core.UnixFilter
    Hakyll.Core.Util.File
    Hakyll.Core.Util.String
    Hakyll.Core.Writable
    Hakyll.Main
    Hakyll.Web.CompressCss
    Hakyll.Web.Feed
    Hakyll.Web.Html
    Hakyll.Web.Html.RelativizeUrls
    Hakyll.Web.Paginate
    Hakyll.Web.Redirect
    Hakyll.Web.Tags
    Hakyll.Web.Template
    Hakyll.Web.Template.Context
    Hakyll.Web.Template.Internal
    Hakyll.Web.Template.Internal.Element
    Hakyll.Web.Template.Internal.Trim
    Hakyll.Web.Template.List

  Other-Modules:
    Data.List.Extended
    Data.Yaml.Extended
    Hakyll.Check
    Hakyll.Core.Compiler.Require
    Hakyll.Core.Identifier.Pattern.Internal
    Hakyll.Core.Item.SomeItem
    Hakyll.Core.Provider.Internal
    Hakyll.Core.Provider.MetadataCache
    Hakyll.Core.Util.Parser
    Paths_hakyll

  Build-Depends:
    base                 >= 4.8      && < 5,
    binary               >= 0.5      && < 0.10,
    blaze-html           >= 0.5      && < 0.10,
    blaze-markup         >= 0.5.1    && < 0.9,
    bytestring           >= 0.9      && < 0.11,
    containers           >= 0.3      && < 0.7,
    cryptohash           >= 0.7      && < 0.12,
    data-default         >= 0.4      && < 0.8,
    deepseq              >= 1.3      && < 1.5,
    directory            >= 1.0      && < 1.4,
    file-embed           >= 0.0.10.1 && < 0.0.12,
    filepath             >= 1.0      && < 1.5,
    lrucache             >= 1.1.1    && < 1.3,
    mtl                  >= 1        && < 2.3,
    network-uri          >= 2.6      && < 2.7,
    optparse-applicative >= 0.12     && < 0.15,
    parsec               >= 3.0      && < 3.2,
    process              >= 1.6      && < 1.7,
    random               >= 1.0      && < 1.2,
    regex-tdfa           >= 1.1      && < 1.3,
    resourcet            >= 1.1      && < 1.3,
    scientific           >= 0.3.4    && < 0.4,
    tagsoup              >= 0.13.1   && < 0.15,
    template-haskell     >= 2.14     && < 2.15,
    text                 >= 0.11     && < 1.3,
    time                 >= 1.8      && < 1.10,
    time-locale-compat   >= 0.1      && < 0.2,
    unordered-containers >= 0.2      && < 0.3,
    vector               >= 0.11     && < 0.13,
    yaml                 >= 0.8.11   && < 0.12

  If flag(previewServer)
    Build-depends:
      wai             >= 3.2   && < 3.3,
      warp            >= 3.2   && < 3.3,
      wai-app-static  >= 3.1   && < 3.2,
      http-types      >= 0.9   && < 0.13,
      fsnotify        >= 0.2   && < 0.4
    Cpp-options:
      -DPREVIEW_SERVER
    Other-modules:
      Hakyll.Preview.Poll
      Hakyll.Preview.Server

  If flag(watchServer)
    Build-depends:
      fsnotify        >= 0.2   && < 0.4
    Cpp-options:
      -DWATCH_SERVER
    Other-modules:
      Hakyll.Preview.Poll

  If flag(checkExternal)
    Build-depends:
      http-conduit >= 2.2    && < 2.4,
      http-types   >= 0.7    && < 0.13
    Cpp-options:
      -DCHECK_EXTERNAL

  If flag(usePandoc)
    Exposed-Modules:
      Hakyll.Web.Pandoc
      Hakyll.Web.Pandoc.Biblio
      Hakyll.Web.Pandoc.FileType
    Other-Modules:
      Hakyll.Web.Pandoc.Binary
    Build-Depends:
      pandoc          >= 2.0.5    && < 2.8,
      pandoc-citeproc >= 0.14     && < 0.17
    Cpp-options:
      -DUSE_PANDOC

Test-suite hakyll-tests
  Type:             exitcode-stdio-1.0
  Hs-source-dirs:   tests
  Main-is:          TestSuite.hs
  Ghc-options:      -Wall -threaded
  Default-language: Haskell2010

  Other-modules:
    Hakyll.Core.Dependencies.Tests
    Hakyll.Core.Identifier.Tests
    Hakyll.Core.Provider.Metadata.Tests
    Hakyll.Core.Provider.Tests
    Hakyll.Core.Routes.Tests
    Hakyll.Core.Rules.Tests
    Hakyll.Core.Runtime.Tests
    Hakyll.Core.Store.Tests
    Hakyll.Core.UnixFilter.Tests
    Hakyll.Core.Util.String.Tests
    Hakyll.Web.CompressCss.Tests
    Hakyll.Web.Html.RelativizeUrls.Tests
    Hakyll.Web.Html.Tests
    Hakyll.Web.Tags.Tests
    Hakyll.Web.Template.Context.Tests
    Hakyll.Web.Template.Tests
    TestSuite.Util

  Build-Depends:
    hakyll,
    QuickCheck                 >= 2.8  && < 2.14,
    tasty                      >= 0.11 && < 1.3,
    tasty-hunit                >= 0.9  && < 0.11,
    tasty-quickcheck           >= 0.8  && < 0.11,
    -- Copy pasted from hakyll dependencies:
    base                 >= 4.8      && < 5,
    bytestring           >= 0.9      && < 0.11,
    containers           >= 0.3      && < 0.7,
    filepath             >= 1.0      && < 1.5,
    text                 >= 0.11     && < 1.3,
    unordered-containers >= 0.2      && < 0.3,
    yaml                 >= 0.8.11   && < 0.12

  If flag(previewServer)
    Cpp-options:
      -DPREVIEW_SERVER

  If flag(watchServer)
    Cpp-options:
      -DWATCH_SERVER

  If flag(checkExternal)
    Cpp-options:
      -DCHECK_EXTERNAL

  If flag(usePandoc)
    Other-modules:
      Hakyll.Web.Pandoc.FileType.Tests
    Cpp-options:
      -DUSE_PANDOC

Executable hakyll-init
  Main-is:          Init.hs
  Ghc-options:      -Wall -threaded
  Hs-source-dirs:   src
  Default-language: Haskell2010

  Other-modules:
    Paths_hakyll

  Build-depends:
    hakyll,
    base      >= 4   && < 5,
    directory >= 1.0 && < 1.4,
    filepath  >= 1.0 && < 1.5

Executable hakyll-website
  Main-is:          site.hs
  Ghc-options:      -Wall -threaded
  Hs-source-dirs:   web
  Default-language: Haskell2010

  If flag(buildWebsite)
    Buildable: True
  Else
    Buildable: False

  Build-depends:
    hakyll,
    base      >= 4     && < 5,
    directory >= 1.0   && < 1.4,
    filepath  >= 1.0   && < 1.5,
    pandoc    >= 2.0.5 && < 2.8
